<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/valueDischarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg_2_green"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/valueDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg_1_red"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <TextView
        android:id="@+id/valueconfirmFRN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:padding="5dp"

        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <TextView
        android:id="@+id/valueconfirmIND"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:background="@drawable/round_bg"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/valueTotal"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/totaltext"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:padding="5dp"
        android:text="@string/total"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/totaltext2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:padding="5dp"
        android:text="@string/confirmedCasesIndian"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/totaltext3"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:padding="5dp"
        android:text="@string/confirmedCasesForeign"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <TextView
        android:id="@+id/totaltext5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg_2_green"
        android:padding="5dp"
        android:text="@string/discharged"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/totaltext6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg_1_red"
        android:padding="5dp"
        android:text="@string/deaths"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <Button
        android:id="@+id/button"
        android:layout_width="321dp"
        android:layout_height="55dp"
        android:background="@drawable/round_bg_button"
        android:text="click here for more info."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>